# HEX-CLOCK-APP

./: CMakeLists.txt  README.md
common/include/opencv/opencv2/: cvconfig.h  opencv_modules.hpp
common/libs/opencv/: libopencv_highgui.so.3.4  libopencv_videoio.so.3.4
inc/clock_loop/: clock_loop.h
inc/common/: user_def.h
inc/display_loop/: display_loop.h
inc/main_loop/: main.h
src/clock_loop/: clock_loop.cpp
src/display_loop/: display_loop.cpp
src/main_loop/: main.cpp
